--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -8,12 +8,12 @@ login:
 
 allFiles:
   path: /api/v7/files
-  controller: App\Controller\FileController::getAll
+  controller: App\Controller\FileController::getAllFiles
 
 
 oneFile:
   path: /api/v7/files/{id}
-  controller: App\Controller\FileController::getOne
+  controller: App\Controller\FileController::getOneFile
   methods: [GET, POST]
   schemes: [https, http]
   requirements:
