--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,9 @@
 <IfModule mod_rewrite.c>
 
 # redirect API requests to public directory
+# not public et not swagger
 RewriteCond %{REQUEST_URI} !public/
+RewriteCond %{REQUEST_URI} !swagger/
 RewriteRule "(.*)" public/$1 [L]
 
 </IfModule>
