--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=1805f7a249408a447e054002143bd6cf
+#APP_SECRET=1805f7a249408a447e054002143bd6cf
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -25,5 +25,6 @@ APP_SECRET=1805f7a249408a447e054002143bd6cf
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="""
 ###< doctrine/doctrine-bundle ###
