--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/expression-language": "^5.4",
         "symfony/flex": "^1.17|^2",
         "symfony/framework-bundle": "5.4.*",
+        "symfony/mime": "^5.4",
         "symfony/monolog-bundle": "^3.8",
         "symfony/runtime": "5.4.*",
         "symfony/var-dumper": "^5.4",
