--- a/.env
+++ b/.env
@@ -15,6 +15,6 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-#APP_SECRET=1805f7a249408a447e054002143bd6cf
+APP_ENV=prod
+APP_SECRET=1805f7a249408a447e054002143bd6cf
 ###< symfony/framework-bundle ###
